RESOLVED FIXED236329
Stop obfuscating exceptions thrown by scripts in data URLs
https://bugs.webkit.org/show_bug.cgi?id=236329
Summary Stop obfuscating exceptions thrown by scripts in data URLs
Chris Dumez
Reported 2022-02-08 14:37:32 PST
Stop obfuscating exceptions thrown by scripts in data URLs. This is causing some WPT tests to fail.
Attachments
Patch (5.91 KB, patch)
2022-02-08 14:39 PST, Chris Dumez
no flags
Patch (7.49 KB, patch)
2022-02-08 16:41 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2022-02-08 14:39:00 PST
Radar WebKit Bug Importer
Comment 2 2022-02-08 15:15:20 PST
Chris Dumez
Comment 3 2022-02-08 16:41:33 PST
Brent Fulgham
Comment 4 2022-02-09 08:57:12 PST
Comment on attachment 451324 [details] Patch r=me
EWS
Comment 5 2022-02-09 09:15:25 PST
Committed r289477 (247020@main): <https://commits.webkit.org/247020@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 451324 [details].
Note You need to log in before you can comment on or make changes to this bug.