Stop obfuscating exceptions thrown by scripts in data URLs https://bugs.webkit.org/show_bug.cgi?id=236329

Reviewed by Brent Fulgham.

LayoutTests/imported/w3c:

Rebaseline WPT tests that are now passing or whose output looks different.

* web-platform-tests/workers/dedicated-worker-in-data-url-context.window-expected.txt:
* web-platform-tests/workers/interfaces/WorkerUtils/importScripts/004-expected.txt:
* web-platform-tests/workers/interfaces/WorkerUtils/importScripts/006-expected.txt:

Source/WebCore:

Stop obfuscating exceptions thrown by scripts in data URLs. This is causing some WPT tests to fail.

No new tests, rebaselined existing tests.

* dom/ScriptExecutionContext.cpp:
(WebCore::ScriptExecutionContext::canIncludeErrorDetails):



Canonical link: https://commits.webkit.org/247020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289477 268f45cc-cd09-0410-ab3c-d52691b4dbfc